[package]
name = "youtube_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
clap = "2.33"
dotenv = "0.15.0"
lazy_static = "1.4.0"
